--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,5 +3,11 @@
         <h1>
             Welcome to <%=title%>
         </h1>
+        <ul>
+            <% data.map((i)=>{
+                %><li><%=i%></li><%
+            })
+            %>
+        </ul>
     </body>
 </html>
